--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.2.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
