--- a/package.json
+++ b/package.json
@@ -12,26 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.2",
-    "@angular/common": "^4.0.2",
-    "@angular/compiler": "^4.0.2",
-    "@angular/compiler-cli": "^4.0.2",
-    "@angular/core": "^4.0.2",
-    "@angular/forms": "^4.0.2",
-    "@angular/http": "^4.0.2",
-    "@angular/platform-browser": "^4.0.2",
-    "@angular/platform-browser-dynamic": "^4.0.2",
-    "@angular/platform-server": "^4.0.2",
-    "@angular/router": "^4.0.2",
+    "@angular/animations": "^5.0.5",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/platform-server": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
+    "firebase": "^4.7.0",
+    "firebase-functions": "^0.7.3",
+    "rxjs": "^5.5.3",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.2.2",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
+    "@angular/cli": "^1.5.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "codelyzer": "1.0.0-beta.1",
@@ -45,7 +49,7 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
+    "typescript": "^2.4.2",
     "webdriver-manager": "10.2.5"
   }
 }
