--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^0.7.1",
-    "nodemailer": "^4.4.0"
+    "nodemailer": "^4.4.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   },
   "private": true
 }
