--- a/functions/package.json
+++ b/functions/package.json
@@ -9,11 +9,13 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.5.1",
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^0.7.1",
     "nodemailer": "^4.4.0",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "sharp": "^0.18.4"
   },
   "private": true
 }
