--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "dependencies": {
     "@angular/animations": "^5.0.5",
     "@angular/common": "^5.0.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/compiler-cli": "^5.0.5",
     "@angular/core": "^5.0.5",
     "@angular/forms": "^5.0.5",
     "@angular/http": "^5.0.5",
@@ -25,6 +23,7 @@
     "@angular/router": "^5.0.5",
     "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
+    "elasticsearch": "^14.0.0",
     "firebase": "^4.7.0",
     "firebase-functions": "^0.7.3",
     "rxjs": "^5.5.3",
@@ -34,8 +33,6 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.5.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/compiler-cli": "^5.0.5",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "codelyzer": "1.0.0-beta.1",
