--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^1.5.1",
+    "elasticsearch": "^14.0.0",
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^0.7.1",
     "nodemailer": "^4.4.0",
