--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.5",
-    "@angular/common": "^5.0.5",
-    "@angular/core": "^5.0.5",
-    "@angular/forms": "^5.0.5",
-    "@angular/http": "^5.0.5",
-    "@angular/platform-browser": "^5.0.5",
-    "@angular/platform-browser-dynamic": "^5.0.5",
-    "@angular/platform-server": "^5.0.5",
-    "@angular/router": "^5.0.5",
-    "angularfire2": "^5.0.0-rc.4",
+    "@angular/animations": "6.0.5",
+    "@angular/common": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/forms": "6.0.5",
+    "@angular/http": "6.0.5",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
+    "@angular/platform-server": "6.0.5",
+    "@angular/router": "6.0.5",
+    "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.4.1",
-    "firebase": "^4.8.0",
+    "firebase": "^5.0.3",
     "firebase-functions": "^0.7.3",
-    "rxjs": "^5.5.3",
+    "rxjs": "^6.2.1",
     "ts-helpers": "^1.1.1",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/compiler-cli": "^5.0.5",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler": "6.0.5",
+    "@angular/compiler-cli": "6.0.5",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "codelyzer": "1.0.0-beta.1",
@@ -49,7 +49,8 @@
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "^2.4.2",
-    "webdriver-manager": "10.2.5"
+    "typescript": "2.7.2",
+    "webdriver-manager": "10.2.5",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
