--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "6.0.5",
     "@angular/platform-server": "6.0.5",
     "@angular/router": "6.0.5",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.3",
     "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.4.1",
     "firebase": "^5.0.3",
