--- a/functions/package.json
+++ b/functions/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@google-cloud/storage": "^1.5.1",
     "cors": "^2.8.4",
-    "elasticsearch": "^14.0.0",
-    "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1",
-    "nodemailer": "^4.4.0",
-    "request": "^2.83.0",
+    "elasticsearch": "^15.2.0",
+    "firebase-admin": "^6.2.0",
+    "firebase-functions": "^2.1.0",
+    "nodemailer": "^4.7.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "sharp": "^0.18.4"
+    "sharp": "^0.21.0"
   },
   "private": true
 }
