--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "core-js": "^2.4.1",
     "firebase": "^5.0.3",
     "firebase-functions": "^2.1.0",
+    "hammerjs": "^2.0.8",
+    "js-ng-carousel": "^1.1.1",
     "rxjs": "^6.2.1",
     "ts-helpers": "^1.1.1",
     "web-animations-js": "^2.3.1",
