Removing Bootstrap responsive dependency

--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/icon-styles.css",
-              "src/bootstrap-responsive.css"
+              "src/icon-styles.css"
             ],
             "scripts": []
           },
