--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.1",
-    "@angular/cli": "7.1.3",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler": "6.0.5",
     "@angular/compiler-cli": "6.0.5",
     "@types/jasmine": "^2.2.30",
