--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "js-ng-carousel": "^1.1.4",
     "rxjs": "^6.2.1",
+    "scroll-behavior-polyfill": "^2.0.7",
     "ts-helpers": "^1.1.1",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
