--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.4.1",
     "firebase": "^5.0.3",
-    "firebase-functions": "^2.1.0",
+    "firebase-functions": "^3.0.1",
     "hammerjs": "^2.0.8",
     "js-ng-carousel": "^1.1.4",
     "rxjs": "^6.2.1",
@@ -38,11 +38,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.3.8",
-    "@angular/compiler": "6.0.5",
-    "@angular/compiler-cli": "6.0.5",
+    "@angular/compiler": "^7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "codelyzer": "^4.5.0",
+    "install": "^0.12.2",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -54,7 +55,7 @@
     "sw-precache-webpack-plugin": "^0.11.5",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "^2.7.2",
+    "typescript": "^3.1.1",
     "webdriver-manager": "10.2.5"
   }
 }
